--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -5,28 +5,38 @@
 
     <div class="card-body">
         <form [formGroup]="productForm" (submit)="onSubmit()">
-            <div class="form-group">
-                <input type="text" name="product" class="form-control" formControlName="name" placeholder="Ajouter produit . . ." required>
+            <div class="mb-3 row">
+                <div class="col-sm-12">
+                <input type="text" name="product" class="form-control" formControlName="name" placeholder="Ajouter produit . . ."  [ngClass]="{'error': submitted && productForm.controls['name'].errors}">
+            </div>
             </div>
 
             <div class="mb-3 row">
                 <div class="col-sm-12">
-                  <input type="number" class="form-control" id="quantity" placeholder="Quantité" formControlName="quantity">
+                  <input type="number" class="form-control" id="quantity" placeholder="Quantité" formControlName="quantity" [ngClass]="{'error': submitted && productForm.controls['quantity'].errors}" >
                 </div>
               </div>
+              <div class="mb-3 row">
+                <div class="col-sm-12">
             <select class="form-select" aria-label="Default select example" formControlName="category">
-                <option  *ngFor="let category of categories" [ngValue]="category">{{category.name}}</option>
+                <option  *ngFor="let category of categories" [ngValue]="category"  >{{category.name}}</option>
               </select>
+              </div>
+              </div>
 
               <div class="mb-3 row">
                 <div class="col-sm-12">
-                  <input type="number" class="form-control" id="price" placeholder="Prix" formControlName="price">
+                  <input type="number" class="form-control" id="price" placeholder="Prix" formControlName="price" [ngClass]="{'error': submitted && productForm.controls['price'].errors}">
                 </div>
               </div>
-
+              <div class="mb-3 row">
+                <div class="col-sm-2">
               <div class="form-check form-switch">
+                <label class="form-check-label float-right" for="isImported">Produit importé ?</label>
                 <input class="form-check-input" type="checkbox" id="isImported " formControlName="isImported"> 
-                <label class="form-check-label" for="flexSwitchCheckChecked">Produit importé</label>
+               
+              </div>
+              </div>
               </div>
             <button class="btn btn-primary" > Ajouter </button>
         </form>
